tests/resource/invalid/type/class/assign_to_non_existent_self.mamba
class X
    def z: Int

    def __init__(self, x: Int) =>
        self.y := x
